--- a/EventPlanner/package.json
+++ b/EventPlanner/package.json
@@ -23,6 +23,10 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.11",
+    "@fullcalendar/angular": "^6.1.16",
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
     "@types/swiper": "^5.4.3",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
