--- a/EventPlanner/package.json
+++ b/EventPlanner/package.json
@@ -23,7 +23,7 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.11",
-    "@ngmodule/material-carousel": "^0.6.0",
+    "@auth0/angular-jwt": "^5.2.0",
     "@types/swiper": "^5.4.3",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
@@ -31,7 +31,6 @@
     "ngx-bootstrap": "^18.1.3",
     "ngx-mat-timepicker": "^18.0.0",
     "ngx-owl-carousel-o": "^18.0.0",
-    "ngx-slick-carousel": "^17.0.0",
     "rxjs": "~7.8.0",
     "swiper": "^9.4.1",
     "tslib": "^2.3.0",
