--- a/EventPlanner/package.json
+++ b/EventPlanner/package.json
@@ -23,11 +23,11 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.11",
+    "@auth0/angular-jwt": "^5.2.0",
     "@fullcalendar/angular": "^6.1.16",
     "@fullcalendar/core": "^6.1.15",
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/interaction": "^6.1.15",
-    "@auth0/angular-jwt": "^5.2.0",
     "@googlemaps/google-maps-services-js": "^3.4.0",
     "@types/swiper": "^5.4.3",
     "bootstrap": "^5.3.3",
@@ -36,6 +36,8 @@
     "ngx-bootstrap": "^18.1.3",
     "ngx-mat-timepicker": "^18.0.0",
     "rxjs": "~7.8.0",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "swiper": "^9.4.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
@@ -47,6 +49,8 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "@types/sockjs-client": "^1.5.4",
+    "@types/stompjs": "^2.3.9",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
