--- a/EventPlanner/package.json
+++ b/EventPlanner/package.json
@@ -32,6 +32,7 @@
     "@types/swiper": "^5.4.3",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
+    "file-saver": "^2.0.5",
     "jquery": "^3.7.1",
     "ngx-bootstrap": "^18.1.3",
     "ngx-mat-timepicker": "^18.0.0",
@@ -47,6 +48,7 @@
     "@angular/cli": "^18.2.11",
     "@angular/compiler-cli": "^18.2.0",
     "@types/express": "^4.17.17",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
     "@types/sockjs-client": "^1.5.4",
