--- a/EventPlanner/tsconfig.app.json
+++ b/EventPlanner/tsconfig.app.json
@@ -11,9 +11,11 @@
   "files": [
     "src/main.ts",
     "src/main.server.ts",
-    "server.ts"
+    "server.ts",
+    "src/polyfills.ts"
   ],
   "include": [
-    "src/**/*.d.ts"
+    "src/**/*.d.ts",
+    "src/polyfills.ts"
   ]
 }
