--- a/EventPlanner/package.json
+++ b/EventPlanner/package.json
@@ -35,6 +35,7 @@
     "express": "^4.18.2",
     "file-saver": "^2.0.5",
     "jquery": "^3.7.1",
+    "leaflet": "^1.9.4",
     "ngx-bootstrap": "^18.1.3",
     "ngx-mat-timepicker": "^18.0.0",
     "rxjs": "~7.8.0",
@@ -51,6 +52,7 @@
     "@types/express": "^4.17.17",
     "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.20",
     "@types/node": "^18.18.0",
     "@types/sockjs-client": "^1.5.4",
     "@types/stompjs": "^2.3.9",
