[FEATURE] Event Details Implemented With Attendance Chart

--- a/EventPlanner/package.json
+++ b/EventPlanner/package.json
@@ -32,10 +32,12 @@
     "@stomp/stompjs": "^7.0.0",
     "@types/swiper": "^5.4.3",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.5.0",
     "express": "^4.18.2",
     "file-saver": "^2.0.5",
     "jquery": "^3.7.1",
     "leaflet": "^1.9.4",
+    "ng2-charts": "^4.1.1",
     "ngx-bootstrap": "^18.1.3",
     "ngx-mat-timepicker": "^18.0.0",
     "rxjs": "~7.8.0",
