--- a/EventPlanner/package.json
+++ b/EventPlanner/package.json
@@ -29,7 +29,7 @@
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/interaction": "^6.1.15",
     "@googlemaps/google-maps-services-js": "^3.4.0",
-    "@stomp/stompjs": "^7.0.0",
+    "@stomp/stompjs": "^7.1.1",
     "@types/swiper": "^5.4.3",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.5.0",
@@ -41,8 +41,7 @@
     "ngx-bootstrap": "^18.1.3",
     "ngx-mat-timepicker": "^18.0.0",
     "rxjs": "~7.8.0",
-    "sockjs-client": "1.6.1",
-    "stompjs": "^2.3.3",
+    "sockjs-client": "^1.6.1",
     "swiper": "^9.4.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
